<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SettingActivity">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primary"
        android:fitsSystemWindows="true">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llCurved"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/header"
        android:background="@drawable/shape_header"
        android:orientation="horizontal" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_app"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginEnd="200dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:hint="@string/vehicle_id"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:minHeight="48dp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:layout_marginEnd="100dp"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:text="@string/update"/>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:layout_marginEnd="100dp"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:text="@string/save"/>

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:text="@string/oke"/>

            </GridLayout>

        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/title_app"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_logo"
        android:elevation="4dp"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/title_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center_horizontal"
        android:text="@string/settings"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>